fix(app-home): update phone assets and fix white-space wrap in cta text

--- a/src/pages/app-home/app-home.scss
+++ b/src/pages/app-home/app-home.scss
@@ -335,8 +335,6 @@
     }
 
     .cta-image {
-      align-self: center;
-
       img {
         margin-top: -36px;
         height: 480px;
@@ -361,13 +359,16 @@
       color: white;
       font-size: 22px;
       margin: 0;
+
+      @include media-breakpoint-down(sm) {
+        font-size: 20px;
+      }
     }
 
     p {
       color: $white;
       font-size: 40px;
       margin: 1rem 0;
-      white-space: nowrap;
 
       @include media-breakpoint-down(sm) {
         font-size: 55px;
